header and footer

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Home</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
+	<h1> This is the Home page</h1>
 
-<h1>This is the home page</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+{% endblock %}
