--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>About</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
+	<h1> This is the About page</h1>
 
-<h1>This is the about page</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+{% endblock %}
